[gd_scene load_steps=7 format=3 uid="uid://cvmdpbotx5ehk"]

[ext_resource type="Script" uid="uid://deqwydk1ppeu6" path="res://UI/Troop Selection/troop_selector.gd" id="1_3tofy"]
[ext_resource type="PackedScene" uid="uid://ddxn3dbfi6q6d" path="res://UI/Troop Selection/drag_box.tscn" id="2_yvun3"]
[ext_resource type="PackedScene" uid="uid://c8i0btgnjiisg" path="res://UI/Troop Selection/TroopInfoPanel.tscn" id="3_b8fni"]

[sub_resource type="Theme" id="Theme_xvp3e"]
default_font_size = 24

[sub_resource type="Theme" id="Theme_3tofy"]
default_font_size = 24

[sub_resource type="Theme" id="Theme_yvun3"]
default_font_size = 48

[node name="TroopSelector" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_3tofy")

[node name="Anchor" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -1.0
offset_right = -184.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ArmySelect" type="Control" parent="Anchor"]
anchors_preset = 0
offset_top = 55.0
offset_bottom = 55.0

[node name="Archer" parent="Anchor/ArmySelect" instance=ExtResource("2_yvun3")]
layout_mode = 0
offset_left = -388.0
offset_top = 146.0
offset_right = -268.0
offset_bottom = 266.0

[node name="Baiter" parent="Anchor/ArmySelect" instance=ExtResource("2_yvun3")]
layout_mode = 0
offset_left = -224.0
offset_top = 146.0
offset_right = -104.0
offset_bottom = 266.0

[node name="Cannon Wheels" parent="Anchor/ArmySelect" instance=ExtResource("2_yvun3")]
layout_mode = 0
offset_left = -60.0
offset_top = 146.0
offset_right = 60.0
offset_bottom = 266.0

[node name="Demoman" parent="Anchor/ArmySelect" instance=ExtResource("2_yvun3")]
layout_mode = 0
offset_left = 104.0
offset_top = 146.0
offset_right = 224.0
offset_bottom = 266.0

[node name="Engineer" parent="Anchor/ArmySelect" instance=ExtResource("2_yvun3")]
layout_mode = 0
offset_left = 268.0
offset_top = 146.0
offset_right = 388.0
offset_bottom = 266.0

[node name="Heavy" parent="Anchor/ArmySelect" instance=ExtResource("2_yvun3")]
layout_mode = 0
offset_left = -388.0
offset_top = -2.0
offset_right = -268.0
offset_bottom = 118.0

[node name="Knight" parent="Anchor/ArmySelect" instance=ExtResource("2_yvun3")]
layout_mode = 0
offset_left = -224.0
offset_top = -2.0
offset_right = -104.0
offset_bottom = 118.0

[node name="Medic" parent="Anchor/ArmySelect" instance=ExtResource("2_yvun3")]
layout_mode = 0
offset_left = -60.0
offset_top = -2.0
offset_right = 60.0
offset_bottom = 118.0

[node name="Pyro" parent="Anchor/ArmySelect" instance=ExtResource("2_yvun3")]
layout_mode = 0
offset_left = 104.0
offset_top = -2.0
offset_right = 224.0
offset_bottom = 118.0

[node name="Scout" parent="Anchor/ArmySelect" instance=ExtResource("2_yvun3")]
layout_mode = 0
offset_left = 268.0
offset_top = -2.0
offset_right = 388.0
offset_bottom = 118.0

[node name="Scrapyard Girl" parent="Anchor/ArmySelect" instance=ExtResource("2_yvun3")]
layout_mode = 0
offset_left = -388.0
offset_top = -150.0
offset_right = -268.0
offset_bottom = -30.0

[node name="Sniper" parent="Anchor/ArmySelect" instance=ExtResource("2_yvun3")]
layout_mode = 0
offset_left = -224.0
offset_top = -150.0
offset_right = -104.0
offset_bottom = -30.0

[node name="Soldier" parent="Anchor/ArmySelect" instance=ExtResource("2_yvun3")]
layout_mode = 0
offset_left = -60.0
offset_top = -150.0
offset_right = 60.0
offset_bottom = -30.0

[node name="Spy" parent="Anchor/ArmySelect" instance=ExtResource("2_yvun3")]
layout_mode = 0
offset_left = 104.0
offset_top = -150.0
offset_right = 224.0
offset_bottom = -30.0

[node name="TV Head" parent="Anchor/ArmySelect" instance=ExtResource("2_yvun3")]
layout_mode = 0
offset_left = 268.0
offset_top = -150.0
offset_right = 388.0
offset_bottom = -30.0

[node name="Squad" type="Control" parent="Anchor"]
anchors_preset = 0

[node name="Troop1" parent="Anchor/Squad" instance=ExtResource("2_yvun3")]
layout_mode = 0
offset_left = -388.0
offset_top = -295.0
offset_right = -268.0
offset_bottom = -175.0
texture = null
can_drag = false
replace = true

[node name="Troop2" parent="Anchor/Squad" instance=ExtResource("2_yvun3")]
layout_mode = 0
offset_left = -224.0
offset_top = -295.0
offset_right = -104.0
offset_bottom = -175.0
texture = null
can_drag = false
replace = true

[node name="Troop3" parent="Anchor/Squad" instance=ExtResource("2_yvun3")]
layout_mode = 0
offset_left = -60.0
offset_top = -295.0
offset_right = 60.0
offset_bottom = -175.0
texture = null
can_drag = false
replace = true

[node name="Troop5" parent="Anchor/Squad" instance=ExtResource("2_yvun3")]
layout_mode = 0
offset_left = 268.0
offset_top = -295.0
offset_right = 388.0
offset_bottom = -175.0
texture = null
can_drag = false
replace = true

[node name="Troop4" parent="Anchor/Squad" instance=ExtResource("2_yvun3")]
layout_mode = 0
offset_left = 104.0
offset_top = -295.0
offset_right = 224.0
offset_bottom = -175.0
texture = null
can_drag = false
replace = true

[node name="ArmyLabel" type="Label" parent="Anchor"]
layout_mode = 0
offset_left = -60.0
offset_top = -171.0
offset_right = 60.0
offset_bottom = -131.0
theme = SubResource("Theme_xvp3e")
text = "Army"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TroopInfoPanel" parent="Anchor" instance=ExtResource("3_b8fni")]
layout_mode = 0
offset_left = 500.0
offset_top = -159.0
offset_right = 680.0
offset_bottom = 321.0

[node name="ReadyToStartButton" type="Button" parent="Anchor"]
layout_mode = 0
offset_left = 500.0
offset_top = -319.0
offset_right = 680.0
offset_bottom = -271.0
theme = SubResource("Theme_3tofy")
text = "Ready Up"

[node name="p1Ready" type="ColorRect" parent="Anchor/ReadyToStartButton"]
layout_mode = 0
offset_left = -27.0
offset_top = 14.0
offset_right = -7.0
offset_bottom = 34.0
color = Color(1, 0, 0, 1)

[node name="p2Ready" type="ColorRect" parent="Anchor/ReadyToStartButton"]
layout_mode = 0
offset_left = 187.0
offset_top = 14.0
offset_right = 207.0
offset_bottom = 34.0
color = Color(1, 0, 0, 1)

[node name="TimeLabel" type="Label" parent="Anchor/ReadyToStartButton"]
layout_mode = 0
offset_top = 52.0
offset_right = 180.0
offset_bottom = 124.0
theme = SubResource("Theme_yvun3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="waitingText" type="Label" parent="Anchor"]
visible = false
layout_mode = 0
offset_left = 506.0
offset_top = -225.0
offset_right = 674.0
offset_bottom = -202.0
text = "Waiting For Player 2..."

[node name="SelectorTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="pressed" from="Anchor/ReadyToStartButton" to="." method="_on_ready_to_start_button_pressed"]
[connection signal="timeout" from="SelectorTimer" to="." method="_on_selector_timer_timeout"]
